Revision history for DBIx::Class

    * Fixes
        - Fix duplicated selected columns when calling 'count' when a same
          aggregate function is used more than once in a 'having' clause
          (RT#83305)

    * Misc
        - Fixup our distbuilding process to stop creating world-writable
          tarball contents (implicitly fixes RT#83084)
        - Added strict and warnings tests for all lib and test files

0.08206 2013-02-08
    * Fixes
        - Fix dbh_do() failing to properly reconnect (regression in 0.08205)
        - Extra sanity check of a fresh DBI handle ($dbh). Fixes
          connection coderefs returning garbage (seen in the wild)

    * Misc
        - Only allow known globals in SQL::Translator leak allowance
        - General cleanup of error message texts - quote names/identifiers
          for easier reading
        - Stop t/52leaks.t from failing when AUTOMATED_TESTING=1

0.08205 2013-01-22
    * New Features / Changes
        - The emulate_limit() arbitrary limit dialect emulation mechanism is
          now deprecated, and will be removed when DBIx::Class migrates to
          Data::Query
        - Support for the source_bind_attributes() storage method has been
          removed after a lengthy deprecation cycle
    * Fixes
        - When performing resultset update/delete only strip condition
          qualifiers - leave the source name alone (RT#80015, RT#78844)
        - Fix incorrect behavior on resultset update/delete invoked on
          composite resultsets (e.g. as_subselect_rs)
        - Fix update/delete operations referencing the updated table failing
          on MySQL, due to its refusal to modify a table being directly
          queried. As a workaround induce in-memory temp-table creation
          (RT#81378, RT#81897)
        - More robust behavior under heavily threaded environments - make
          sure we do not have refaddr reuse in the global storage registry